@@ -24,7 +24,8 @@
    Return GSL_SUCCESS if all arguments are okay, complain appropriately (i.e.
    call GSL_ERROR and return GSL_FAILURE) otherwise. */
 int
-_gsl_root_validate_bfp_args(void * root, void * f, double * lower_bound,
+_gsl_root_validate_bfp_args(double * root, double (* f)(double), 
+			    double * lower_bound,
                             double * upper_bound, double rel_epsilon,
                             double abs_epsilon, unsigned int max_iterations,
                             double max_deltay)
@@ -46,7 +47,8 @@ _gsl_root_validate_bfp_args(void * root, void * f, double * lower_bound,
    GSL_SUCCESS if all arguments are okay, complain appropriately (i.e. call
    GSL_ERROR and return GSL_FAILURE) otherwise. */
 int
-_gsl_root_validate_sn_args(void * root, void * f, double * guess1,
+_gsl_root_validate_sn_args(double * root, double (* f)(double), 
+			   double * guess1,
                            double * guess2, double rel_epsilon,
                            double abs_epsilon, unsigned int max_iterations,
                            double max_step_size)
@@ -69,7 +71,7 @@ _gsl_root_validate_sn_args(void * root, void * f, double * guess1,
    * Relative and absolute error are non-negative.
    * The relative error is not too small. */
 int
-_gsl_root_validate_args(void * root, void * f, double * where1,
+_gsl_root_validate_args(double * root, double (* f)(double), double * where1,
                         double * where2, double rel_epsilon,
                         double abs_epsilon, unsigned int max_iterations)
 {
